<resources>
    <string name="app_name">JanInfinum</string>
    <string name="passwordHint">Password</string>
    <string name="emailHint">Email</string>
    <string name="loginButton">Login</string>
    <string name="LoginTitle">Login</string>
    <string name="LoginDescription">In order to continue please log in</string>
    <string name="invalidEmailErrorMessage">Invalid e-mail address</string>
    <string name="shows">Shows</string>
    <string name="empty_state_recycler_view">Your shows are not showing. Get it?</string>
    <string name="showTitle">showTitle</string>
    <string name="showDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="reviewsExtra">Reviews (%1$.2f average on %2$d reviews)</string>
    <string name="reviews">Reviews</string>
    <string name="write_your_review">Write your review</string>
    <string name="review_rating_placeholder">3</string>
    <string name="no_reviews_yet">No reviews yet</string>
    <string name="checkbox_remember_me">Remember me</string>
    <string name="email">email</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="loading">Loading...</string>
    <string name="shows_are_loading">Shows are loading...\nPlease wait</string>
    <string name="unrated_review_toast_message">Please rate the show</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="login_unsuccessful">Login Unsuccessful \n Check your email and password</string>
    <string name="registration_successful">Registration\nsuccessful!</string>
</resources>