<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_start"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/userMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_start"
        android:text="@string/email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeProfilePictureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white"
        android:textColor="@color/my_purple"
        android:textAllCaps="false"
        android:layout_margin="@dimen/margin_start"
        android:text="@string/change_profile_photo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginBottom="@dimen/margin_start"
        android:background="@drawable/button_purple"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/logout" />

</LinearLayout>