<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowDetailsActivity">

    <TextView
        android:id="@+id/showDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_start"
        android:text="@string/showTitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/showDetailImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/showDetailDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showDetailTitle"
        app:srcCompat="@drawable/ic_office" />

    <TextView
        android:id="@+id/showDetailDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/showDescription"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showDetailImage" />

    <TextView
        android:id="@+id/textViewReviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviews"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showDetailDesc" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReviews" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerVewReviews"
        android:layout_width="409dp"
        android:layout_height="380dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

</androidx.constraintlayout.widget.ConstraintLayout>