<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_purple"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageViewTopLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_top_left_illustration" />

    <ImageView
        android:id="@+id/imageViewTopRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_top_right_illustration" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:background="@drawable/button"
        android:enabled="false"
        android:text="@string/loginButton"
        android:textAllCaps="false"
        android:textColor="@color/my_purple"
        app:layout_constraintVertical_bias="0.80"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

    <TextView
        android:id="@+id/textViewLoginBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginBottom="16dp"
        android:text="@string/LoginTitle"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_big"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewLoginSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTopRight"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textViewLoginSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/LoginDescription"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginBig" />

    <ImageView
        android:id="@+id/arrowLogoShows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textViewLoginBig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewTopRight"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTopLeft"
        app:srcCompat="@drawable/ic_arrow" />

    <TextView
        android:id="@+id/textViewShowsLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/shows"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_big"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewLoginBig"
        app:layout_constraintStart_toEndOf="@+id/arrowLogoShows"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTopLeft" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:hint="@string/emailHint"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@id/imageViewTopRight"
        app:boxStrokeColor="@color/textinput"
        app:hintTextColor="@color/white"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/white"
        android:hint="@string/passwordHint"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/textinput"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        app:passwordToggleTint="@color/white"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmailAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>